# Depth2Metric

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.local.yaml  docker-compose.yaml  grafana_dashboard.json  pyproject.toml
src/depth2metric/: main.py  pipeline.py
src/depth2metric/common/: metrics.py  settings.py  utils.py
src/depth2metric/inference/: camera.py  datasets.py  geometry.py  models.py  utils.py
src/depth2metric/scripts/: precompute_samples.py
static/: index.html  script.js  styles.css
