[project]
name = "depth2metric"
version = "0.0.1"
description = "Intelligent depth-based measurements from simple images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "opencv-contrib-python>=4.13.0.90",
    "timm>=1.0.24",
    "torchmetrics>=1.8.2",
]

[project.optional-dependencies]
cpu = ["torch", "torchvision", "open3d_cpu"]
gpu = ["torch", "torchvision", "open3d"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "imageio[ffmpeg]>=2.37.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
