[project]
name = "depth2metric"
version = "0.3.0"
requires-python = "==3.12.10"
description = "Intelligent depth-based measurements from simple images."
readme = "README.md"
dependencies = [
    "exifread>=3.5.1",
    "fastapi[standard]>=0.128.7",
    "open3d-cpu>=0.19.0",
    "opencv-python-headless==4.12.0.88",
    "python-multipart>=0.0.22",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.14",
    "uvicorn>=0.40.0",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[tool.uv]
# Force any package that depends on opencv-python to not install
# Will default to cv2 installed as a regular dependency
# Only way to force headless opencv
override-dependencies = ["opencv-python; python_version < '0'"]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ipywidgets>=8.1.8", "pandas>=3.0.0"]

[tool.uv.sources]
torch = { index = "pytorch_cpu" }
torchvision = { index = "pytorch_cpu" }

[[tool.uv.index]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
